Fix camino bug 311683. The earlier fix for bug 297343 introduced a short delay before the dispatch of focus/activate events on window activation. It turns out that this was bad, as you could end up with two windows which continually each come to the front ("duelling windows"). This patch makes things synchronous again, but fixes the original bug by exposing a category on NSWindow in the widget code that allows the embedder to know if a SetFocus() call is coming as a result of window activation. r=mento